Attempt at spacing the modal correctly on Brave Android

--- a/components/ModalElement/modal-element.css
+++ b/components/ModalElement/modal-element.css
@@ -116,7 +116,7 @@ hr {
 }
 
 @media (hover: none) and (pointer: coarse) {
-  .modal-dialog {
+  .modal-header-and-body {
     transform: translateY(1.5rem);
   }
 }
